# single-cell-data-portal

./: .codeclimate.yml  .dockerignore  .env  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CL_0000033.json  CONTRIBUTING.md  DEV_ENV.md  DEV_ENV_WITHOUT_DOCKER.md  Dockerfile  Dockerfile.api_server  Dockerfile.backend  Dockerfile.backend_de  Dockerfile.backend_wmg  Dockerfile.cellguide_pipeline  Dockerfile.data_cube_creation  Dockerfile.dataset_submissions  Dockerfile.dataset_version_cleanup  Dockerfile.handle_dataset_submission  Dockerfile.handle_dataset_submissions  Dockerfile.handle_success  Dockerfile.processing  Dockerfile.processing_base  Dockerfile.processing_image  Dockerfile.schema_migration  Dockerfile.sync_envs_with_prod  Dockerfile.upload_failures  Dockerfile.upload_success  Dockerfile.wmg_pipeline  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  REMOTE_DEV.md  cell_guide_data_pipeline.ipynb  cell_type_orderings.json  container_init.sh  (+37 more)
.github/: dependabot.yml  main.yml
.happy/: catalog-info.yaml  config.json  requirements.txt
.infra/: common.yaml
1/: index.html
15304/: index.html
15305/: index.html
15306/: index.html
15308/: index.html
15309/: index.html
15310/: index.html
15311/: index.html
15314/: index.html
15317/: index.html
15318/: index.html
15319/: index.html
15320/: index.html
15323/: index.html
15325/: index.html
15327/: index.html
15328/: index.html
15331/: index.html
15332/: index.html
15333/: index.html
15334/: index.html
15335/: index.html
15336/: index.html
15337/: index.html
15338/: index.html
15339/: index.html
15340/: index.html
15341/: index.html
15342/: index.html
15344/: index.html
15345/: index.html
15346/: index.html
15350/: index.html
15351/: index.html
15352/: index.html
15353/: index.html
15355/: index.html
15356/: index.html
15359/: index.html
15360/: index.html
15361/: index.html
15362/: index.html
15363/: index.html
15364/: index.html
15365/: index.html
15367/: index.html
15368/: index.html
15370/: index.html
15371/: index.html
15372/: index.html
15373/: index.html
15374/: index.html
15375/: index.html
15376/: index.html
15377/: index.html
15379/: index.html
15380/: index.html
15383/: index.html
15384/: index.html
15385/: index.html
15386/: index.html
15387/: index.html
15388/: index.html
15391/: index.html
15395/: index.html
15396/: index.html
15398/: index.html
15399/: index.html
15401/: index.html
15405/: index.html
15407/: index.html
15408/: index.html
15410/: index.html
15411/: index.html
15413/: index.html
15416/: index.html
15417/: index.html
15419/: index.html
15420/: index.html
15421/: index.html
15422/: index.html
15424/: index.html
15425/: index.html
15426/: index.html
15427/: index.html
15429/: index.html
15430/: index.html
15431/: index.html
15432/: index.html
15433/: index.html
15438/: index.html
15439/: index.html
15440/: index.html
15441/: index.html
15442/: index.html
15444/: index.html
15446/: index.html
15447/: index.html
15448/: index.html
15449/: index.html
15450/: index.html
15454/: index.html
15456/: index.html
15457/: index.html
15458/: index.html
15459/: index.html
15460/: index.html
15461/: index.html
15462/: index.html
15463/: index.html
15473/: index.html
15474/: index.html
15475/: index.html
15477/: index.html
15478/: index.html
15479/: index.html
15480/: index.html
15481/: index.html
15482/: index.html
15483/: index.html
15484/: index.html
15486/: index.html
15487/: index.html
15489/: index.html
15490/: index.html
15492/: index.html
15498/: index.html
15502/: index.html
15503/: index.html
15504/: index.html
15505/: index.html
15508/: index.html
15510/: index.html
15511/: index.html
15512/: index.html
15514/: index.html
15515/: index.html
15528/: index.html
15529/: index.html
15530/: index.html
15683/: index.html
15684/: index.html
15686/: index.html
15687/: index.html
15688/: index.html
15689/: index.html
15690/: index.html
15691/: index.html
15695/: index.html
15696/: index.html
15703/: index.html
15704/: index.html
15707/: index.html
15709/: index.html
15710/: index.html
15714/: index.html
15715/: index.html
15716/: index.html
15723/: index.html
15727/: index.html
15733/: index.html
15747/: index.html
15760/: index.html
15761/: index.html
15762/: index.html
15763/: index.html
15764/: index.html
15765/: index.html
15766/: index.html
15767/: index.html
15770/: index.html
15771/: index.html
15772/: index.html
15773/: index.html
15779/: index.html
15789/: index.html
15790/: index.html
15791/: index.html
15792/: index.html
15795/: index.html
15797/: index.html
15811/: index.html
15815/: index.html
15817/: index.html
15821/: index.html
15854/: index.html
15857/: index.html
15858/: index.html
15860/: index.html
15861/: index.html
15862/: index.html
15864/: index.html
15865/: index.html
15866/: index.html
15867/: index.html
15869/: index.html
15872/: index.html
15873/: index.html
15920/: index.html
15922/: index.html
15923/: index.html
15925/: index.html
15927/: index.html
15928/: index.html
15931/: index.html
python_dependencies/api_server/: pyproject.toml  requirements-dev.txt  requirements.txt
python_dependencies/backend/: pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
python_dependencies/backend/common/server/: requirements.in  requirements.txt
python_dependencies/backend/de/: requirements.in  requirements.txt
python_dependencies/backend/wmg/: requirements.in  requirements.txt
python_dependencies/processing/: pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
python_dependencies/submissions/: pyproject.toml  requirements-dev.txt  requirements.txt
python_dependencies/wmg/: pyproject.toml  requirements.txt
(+9673326 files in other folders)
