[tool.black]
line-length = 120
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | virtualenv
    | _build
    | buck-out
    | build
    | dist
    | vendor
    | vendor.in
    | node_modules
  )/
)
'''

[tool.ruff]
select = ["E", "F", "B", "SIM", "C4", "I"]
ignore = ["E501", "E402", "C408", ]
line-length = 120
target-version = "py38"

[tool.poetry]
name = "portal"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.api_server.dependencies]
python = "^3.10"
alembic = ">=1.9, <2.0"
anndata = "0.8.0"
authlib = "0.14.3"
boto3 = ">=1.11.17"
botocore = ">=1.14.17"
connexion = {version = "2.13.0", extras = ["swagger-ui"]}
dataclasses-json = "0.5.7"
datadog = "0.47.0"
ddtrace = "2.1.4"
flask = "2.2.3"
flask-cors = ">=3.0.6"
flask-server-timing = "0.1.2"
furl = "^2.1.3"
gunicorn = {version = ">=20.1.0", extras = ["gevent"]}
jsonschema = "^4.20.0"
matplotlib = "3.6.3"
numba = "0.56.2"
numpy = "1.23.5"
owlready2 = "0.40.0"
pandas = "1.5.3"
psutil = "5.9.5"
psycopg2-binary = ">=2.8.5"
pydantic = "1.10.7"
pymysql = "0.9.3"
python-jose = {version = ">=3.1.0", extras = ["cryptography"]}
python-json-logger = "^2.0.7"
requests = ">=2.22.0"
scanpy = "1.9.3"
sqlalchemy-utils = ">=0.36.8"
sqlalchemy = ">=1.4.0"
tenacity = "^8.2.3"
tiledb = "0.22.3"
werkzeug = "2.2.3"

[tool.poetry.group.cellguide_pipeline.dependencies]
python = "^3.10"
anndata = "0.9.2"
annotated-types = "0.5.0"
awscli = "1.29.34"
boto3 = "1.28.25"
botocore = "1.31.34"
certifi = "2023.7.22"
chardet = "5.2.0"
charset-normalizer = "3.2.0"
ddtrace = "2.1.4"
fastobo = "0.12.2"
h5py = "3.9.0"
idna = "3.4"
jmespath = "1.0.1"
llvmlite = "0.40.1"
natsort = "8.4.0"
networkx = "3.1"
numba = "0.57.1"
numpy = "1.24.4"
owlready2 = "0.44"
openai = "0.27.7"
packaging = "23.1"
pandas = "2.0.3"
pronto = "2.5.4"
psutil = "5.9.5"
pydantic = "1.10.7"
pydantic-core = "2.4.0"
python-dateutil = "2.8.2"
pytz = "2023.3"
requests = "2.31.0"
s3transfer = "0.6.1"
scipy = "^1.11.4"
six = "1.16.0"
tiledb = "0.22.3"
typing-extensions = "4.7.1"
tzdata = "2023.3"
urllib3 = "1.26.16"
pyarrow = "12.0.0"
dask = "2023.8.1"
python-json-logger = "^2.0.7"

[tool.poetry.group.processing.dependencies]
python = "^3.8"
alembic = ">=1.9"
anndata = "0.8.0"
boto3 = ">=1.11.17"
botocore = ">=1.14.17"
cellxgene-schema = "^4.0.0"
dataclasses-json = "^0.6.3"
ddtrace = "2.1.4"
furl = "^2.1.3"
jsonschema = "^4.20.0"
numba = "0.56.2"
numpy = "1.23.2"
pandas = "1.4.4"
psutil = ">=5.9.0"
psycopg2-binary = ">=2.8.5"
pyarrow = ">=1.0"
pydantic = ">=1.9.0"
pymysql = "0.9.3"
python-json-logger = "^2.0.7"
requests = ">=2.22.0"
rsa = ">=4.7"
s3fs = "0.4.2"
scanpy = "1.9.3"
sqlalchemy = ">=1.4.0"
sqlalchemy-utils = ">=0.36.8"
tenacity = "^8.2.3"
tiledb = "0.21.4"

[tool.poetry.group.submissions.dependencies]
python = "^3.10"
boto3 = "^1.33.10"
dataclasses-json = "^0.6.3"
psycopg2-binary = ">=2.8.5"
python-json-logger = "^2.0.7"
requests = "^2.31.0"
sqlalchemy = ">=1.3.17,<2"
tenacity = "^8.2.3"

[tool.poetry.group.upload_handler.dependencies]
python = "^3.10"
boto3 = "^1.33.10"
dataclasses-json = "^0.6.3"
psycopg2-binary = ">=2.8.5"
python-json-logger = ">=2.0.7"
requests = ">=2.22.0"
sqlalchemy = ">=1.3.17,<2"
tenacity = "^8.2.3"

[tool.poetry.group.wmg.dependencies]

[tool.poetry.group.dev.dependencies]
allure-pytest = "<3"
click = ">=8.1.3"
coverage = ">=6.5.0"
moto = "^3.1.3"
pytest = "^7.4.3"
pytest-subtests = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

