[tool.poetry]
name = "api-server"
authors = ["The Single Cell Portal Team"]
version = "0.1.0"
description = "Single Cell Portal API Server"

[tool.poetry.dependencies]
python = "^3.10"
alembic = ">=1.9, <2.0"
anndata = "0.8.0"
authlib = "0.14.3"
boto3 = ">=1.11.17"
botocore = ">=1.14.17"
connexion = {version = "2.13.0", extras = ["swagger-ui"]}
dataclasses-json = "0.5.7"
# TODO: Check if this is really essential for APM tracing
# see ticket: https://github.com/chanzuckerberg/single-cell-data-portal/issues/5821
datadog = "0.47.0"
ddtrace = "2.1.4"
flask = "2.2.3"
flask-cors = ">=3.0.6"
flask-server-timing = "0.1.2"
furl = "^2.1.3"
gunicorn = {version = ">=20.1.0", extras = ["gevent"]}
jsonschema = "^4.20.0"
matplotlib = "3.6.3" # 3.7.0 isn't compatible with scanpy: https://github.com/scverse/scanpy/issues/2411
numba = "0.56.2" # required for where's my gene
numpy = "1.23.5" # required for where's my gene
pyarrow = "12.0.0" # required for where's my gene
owlready2 = "0.40.0"
pandas = "1.5.3" # required for where's my gene
psutil = "5.9.5"
psycopg2-binary = ">=2.8.5"
pydantic = "1.10.7"
pymysql = "0.9.3"
python-jose = {version = ">=3.1.0", extras = ["cryptography"]}
python-json-logger = "^2.0.7"
requests = ">=2.22.0"
scanpy = "1.9.3"
sqlalchemy-utils = ">=0.36.8"
sqlalchemy = ">=1.3.17,<2"
tenacity = "^8.2.3"
tiledb = "0.22.3" # Must be kept in sync with ruff version in .pre-commit-config.yaml
werkzeug = "2.2.3"
# TODO: Determine if cmake is really needed for ddtrace
# see ticket: https://github.com/chanzuckerberg/single-cell-data-portal/issues/5821
cmake = "^3.28.1"
click = ">=8.1.3"
setproctitle = ">=1.3.2" # for gunicorn integration with datadog


[tool.poetry.group.dev.dependencies]
allure-pytest = "<3"
coverage = ">=6.5.0"
moto = "^3.1.3"
pytest = "^7.4.3"
pytest-subtests = "^0.11.0"


[build-system]
requires = ["poetry-core==1.8.1"]
build-backend = "poetry.core.masonry.api"
