[tool.poetry]
name = "processing"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
alembic = ">=1.9"
anndata = "0.8.0"
boto3 = ">=1.11.17"
botocore = ">=1.14.17"
cellxgene-schema = "^4.0.0"
dataclasses-json = "^0.6.3"
ddtrace = "2.1.4"
furl = "^2.1.3"
jsonschema = "^4.20.0"
numba = "0.56.2"
numpy = "1.23.2"
pandas = "1.4.4"
psutil = ">=5.9.0"
psycopg2-binary = ">=2.8.5"
pyarrow = ">=1.0"
pydantic = ">=1.9.0"
pymysql = "0.9.3"
python-json-logger = "^2.0.7"
requests = ">=2.22.0"
rsa = ">=4.7"
s3fs = "0.4.2"
scanpy = "1.9.3"
sqlalchemy = ">=1.4.0"
sqlalchemy-utils = ">=0.36.8"
tenacity = "^8.2.3"
tiledb = "0.21.4"

[tool.poetry.group.dev.dependencies]
allure-pytest = "<3"
coverage = ">=6.5.0"
moto = "3.1.3"
pytest = "^7.4.3"
pytest-subtests = "^0.11.0"

[build-system]
requires = ["poetry-core==1.8.1"]
build-backend = "poetry.core.masonry.api"
