[tool.poetry]
name = "submissions"
version = "0.1.0"
description = ""
authors = ["Chanzuckerberg Initiative Foundation"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.33.10"
dataclasses-json = "^0.6.3"
psycopg2-binary = ">=2.8.5"
python-json-logger = "^2.0.7"
requests = "^2.31.0"
sqlalchemy = ">=1.3.17,<2"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
allure-pytest = "<3"
coverage = ">=6.5.0"
pytest = "^7.4.3"
pytest-subtests = "^0.11.0"

[build-system]
requires = ["poetry-core==1.8.1"]
build-backend = "poetry.core.masonry.api"
