[tool.poetry]
name = "wmg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = ""

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
alembic = "<2"
anndata = "0.8.0"
boto3 = "<2"
cellxgene-census = "1.6.0"
dataclasses-json = "0.5.7"
ddtrace = "<3"
furl = "<3"
jsonschema = "^4.20.0"
openai = "0.27.7"
numpy = "<2"
numba = ">=0.56.4"
owlready2 = "0.40.0"
pandas = "<2"
pronto = "<3"
psutil = "<6"
pydantic = "<2"
python-json-logger = "^2.0.7"
requests = "^2.31.0"
scanpy = "<2"
scipy = "<2"
sqlalchemy = "<2"
sqlalchemy-utils = "^0.41.1"
tenacity = "<9"
tiledbsoma = "1.4.4"
dask = "2023.8.1"
pygraphviz = "<2"
awscli = "<2"


[tool.poetry.group.dev.dependencies]
moto = "<4"
coverage = "<8"
allure-pytest = "<3"
pytest = "<8"
pytest-subtests = "^0.11.0"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core==1.8.1"]
build-backend = "poetry.core.masonry.api"
