[tool.poetry]
name = "wmg"
version = "0.1.0"
description = ""
authors = ["Chanzuckerberg Initiative Foundation"]
readme = ""

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
alembic = "<2"
anndata = "0.8.0"
boto3 = "<2"
cellxgene-census = ">=1.9.1" # WMG pipeline always reads the latest version of Census so we need to use the latest package version
dataclasses-json = "0.5.7"
ddtrace = "<3"
furl = "<3"
jsonschema = "^4.20.0"
openai = "0.27.7"
numpy = "<2"
numba = "*"
owlready2 = "0.40.0"
pandas = "<2"
pronto = "<3"
psutil = "<6"
pydantic = "<2"
python-json-logger = "^2.0.7"
requests = "^2.31.0"
scanpy = "<2"
scipy = "<2"
sqlalchemy = "<2"
sqlalchemy-utils = "^0.41.1"
tenacity = "<9"
tiledbsoma = ">=1.6.1" # WMG pipeline always reads the latest version of Census so we need to use the latest package version
dask = "2023.8.1"
pygraphviz = "<2"
awscli = "<2"


[tool.poetry.group.dev.dependencies]
moto = "<4"
coverage = "<8"
allure-pytest = "<3"
pytest = "<8"
pytest-subtests = "^0.11.0"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core==1.8.1"]
build-backend = "poetry.core.masonry.api"
